# CheckersServer

.gitignore/: CMakeLists.txt  main.cpp
.gitignore/Enums/: ActionType.h  GameStatus.h  PlayerType.h
.gitignore/Models/: CommunicationService.h  Game.h  Logger.h  Server.h  Utilities.h
.gitignore/Other/: JsonConversions.h  cpplinq.h  json.hpp
.gitignore/Parameters/: CloseRoomResult.h  CreateRoomParameter.h  JoinRoomParameter.h  LeaveRoomParameter.h  MakeMoveParameter.h  Parameter.h  StartGameParameter.h  SurrenderParameter.h  UpdateGameboardParameter.h
.gitignore/Results/: CreateRoomResult.h  JoinRoomResult.h  Result.h
.gitignore/ViewModels/: Move.h  Pawn.h  Player.h  Position.h
